--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^3.4.3",
     "ethereumjs-testrpc": "^6.0.3",
+    "moment": "^2.22.2",
     "openzeppelin-solidity": "1.10.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
