--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-scripts": "1.1.4",
+    "rxjs": "^6.2.2",
     "web3": "^0.20.1"
   },
   "scripts": {
