--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "deploy": "rm -rf ./build/contracts && truffle deploy"
+    "deploy": "rm -rf ./src/contracts && truffle deploy --contracts_build_directory=./src/contracts"
   }
 }
