--- a/package.json
+++ b/package.json
@@ -46,7 +46,13 @@
         2,
         "never"
       ],
-      "react/destructuring-assignment": [true, "always", { "ignoreClassFields": true }],
+      "react/destructuring-assignment": [
+        true,
+        "always",
+        {
+          "ignoreClassFields": true
+        }
+      ],
       "jsx-a11y/label-has-associated-control": "off",
       "react/prop-types": "off",
       "implicit-arrow-linebreak": "off",
